--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-
-
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
@@ -8,17 +6,14 @@
 @import "~bootstrap/scss/reboot";
 @import "~bootstrap/scss/type";
 @import "~bootstrap/scss/containers";
-@import '~bootstrap/scss/grid';
+@import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/buttons";
-@import '~bootstrap/scss/nav';
+@import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/helpers";
 @import "~bootstrap/scss/utilities/api";
 @import "~bootstrap/scss/badge";
 @import "~bootstrap/scss/nav";
-@import './theme.scss';
-
-
-
+@import "./theme.scss";
 
 legend {
   float: none;
@@ -26,7 +21,7 @@ legend {
 
 body {
   // background-color: $background;
-  font-family: 'Fira Sans', sans-serif;
+  font-family: "Fira Sans", sans-serif;
   background-color: white;
 }
 
@@ -79,7 +74,7 @@ a:visited {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-.form-group>.input-feedback {
+.form-group > .input-feedback {
   color: $secondary;
   font-size: 13px;
   margin-top: 10px;
@@ -120,7 +115,7 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
 
@@ -130,7 +125,7 @@ input[type=number] {
 
 .react-datepicker-wrapper,
 .react-datepicker__input-container {
-  width: 100%
+  width: 100%;
 }
 
 .card {
@@ -162,22 +157,22 @@ input[type=number] {
   margin-right: auto;
 }
 
-
-.w-100{
+.w-100 {
   width: 100%;
 }
 
-.h-100{
+.h-100 {
   height: 100%;
 }
 
-html,body,#root{
+html,
+body,
+#root {
   width: 100%;
   height: 100%;
-  
 }
 
-body{
+body {
   background: #f2f2f2;
 }
 
@@ -207,8 +202,7 @@ body{
   vertical-align: middle;
 }
 
-
-.page_centr{
+.page_centr {
   display: table;
   height: 100%;
   width: 90%;
@@ -217,34 +211,39 @@ body{
   // min-width: 1080px;
 }
 
-.page_str{
+.page_str {
   padding-top: 66px;
 }
 
-.log_out_icon{
+.log_out_icon {
   justify-content: end;
-    padding-right: 28px;
+  padding-right: 28px;
 }
 
-.page_hdr{
-      padding-bottom: 30px;
-      font-size: 22px;
-    
-      font:normal bold 28px 'Tisa Sans Pro bold'; 
-      letter-spacing: var(--unnamed-character-spacing-0);
-      text-align: left;
-     
-      letter-spacing: 0px;
-      color: #000000;
-      padding-left: 20px  ;
+.page_hdr {
+  padding-bottom: 30px;
+  font-size: 22px;
+
+  font: normal bold 28px "Tisa Sans Pro bold";
+  letter-spacing: var(--unnamed-character-spacing-0);
+  text-align: left;
+
+  letter-spacing: 0px;
+  color: #000000;
+  padding-left: 20px;
+  @media screen and (max-width: 768px) {
+    font-size: 20px;
+    padding-bottom: 24px;
+    padding-left: 15px;
+    padding-top: 5px;
+  }
 }
 
 :root {
-
   /* Colors: */
-  --bg-color: #B7410E;
-  --unnamed-color-ffffff: #FFFFFF;
-  
+  --bg-color: #b7410e;
+  --unnamed-color-ffffff: #ffffff;
+
   /* Font/text values */
   --unnamed-font-family-rubik: Rubik;
   --unnamed-font-style-normal: normal;
@@ -252,4 +251,4 @@ body{
   --unnamed-font-size-15: 15px;
   --unnamed-character-spacing-0: 0px;
   --unnamed-line-spacing-19: 19px;
-  }
+}
