--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,7 +4,8 @@
   background-color: $white;
   color: $dark;
   padding: 0.75%;
-  position: fixed;
+  position: sticky;
+  top: 0;
   z-index: 1200;
   box-shadow: $box-shadow;
   @media screen and (max-width: 768px) {
