--- a/src/pages/report/report.scss
+++ b/src/pages/report/report.scss
@@ -1,27 +1,25 @@
+.flexbox-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  margin: 0;
+  min-height: 24em;
+}
 
+.flexbox-item {
+  max-width: 90%;
+  background: gray;
+}
 
+.fixed {
+  flex: none;
+  max-width: 90%;
+}
 
-
-.flexbox-container { 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: auto;
-    margin: 0;
-    min-height: 24em;
-    
+.tbl_main_cntr {
+  height: calc(100% - 200px);
+  @media screen and (max-width: 768px) {
+    width: 92%;
   }
-  
-  .flexbox-item {
-    max-width: 90%;
-    background: gray;
-  }
-  
-  .fixed {
-    flex: none;
-    max-width: 90%;
-  }
-
-  .tbl_main_cntr{
-    height: calc(100% - 200px);
-  }
+}
