--- a/src/components/AdvanceTable/AdvanceTable.scss
+++ b/src/components/AdvanceTable/AdvanceTable.scss
@@ -122,6 +122,9 @@
         &.C {
           background: #ea9400;
         }
+        &.D {
+          background: rgb(209, 59, 59);
+        }
       }
 
       .acc_tran {
