--- a/src/components/AdvanceTable/advancetable1.scss
+++ b/src/components/AdvanceTable/advancetable1.scss
@@ -100,6 +100,7 @@
             }
             &.D {
               background: rgb(209, 59, 59);
+              color: whitesmoke;
             }
           }
         }
@@ -143,4 +144,15 @@
   margin: 0 1rem 2rem 0;
   display: flex;
   justify-content: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 0.5rem;
+  // max-width: 20%;
+}
+.download_csv_btn > button {
+  width: 20%;
+}
+.download_csv_btn > button:first-child {
+  background-color: rgb(209, 65, 65);
+  color: whitesmoke;
 }
